# racker-terminal

./: .env.release.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
docs/: auto-update.md  compatibility-matrix.md  phase1-plan.md  phase2-plan.md  phase3-plan.md  phase4-plan.md  release-process.md  unit-a2-design.md  unit-c-design.md  unit-de-design.md  unit-f-design.md  unit-h-design.md  unit-pd2-design.md
scripts/: generate-update-manifest.mjs  release.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  pty.rs  wsl.rs
src/assets/fonts/: README.md
src/components/: FavoriteDialog.test.ts  FavoriteDialog.tsx  FavoritesSection.tsx  FileDropOverlay.tsx  GroupSection.tsx  InlineEdit.tsx  SettingsDialog.tsx  Sidebar.tsx  TabItem.tsx  Terminal.tsx  TerminalPane.helpers.test.ts  TerminalPane.tsx  TerminalPaneContainer.tsx  TitleBar.tsx  UpdateDialog.tsx
src/hooks/: useFileDropToTerminal.ts
src/lib/: dndResolve.test.ts  dndResolve.ts  dragDropPath.test.ts  dragDropPath.ts  id.ts  profileTemplates.test.ts  profileTemplates.ts  pty.ts  terminalRegistry.test.ts  terminalRegistry.ts  updater.test.ts  updater.ts  urlValidator.test.ts  urlValidator.ts  wsl.test.ts  wsl.ts
src/store/: appStore.test.ts  appStore.ts
src/styles/: dropdown-menu.css  file-drop-overlay.css  fonts.css  sidebar.css  terminal.css  title-bar.css  update-dialog.css  variables.css
src/types/: index.ts
