[package]
name = "racker-terminal"
version = "1.1.0"
description = "縦サイドバー + グループ + お気に入りのターミナル。WSL/PowerShell/cmd を快適に切り替え。"
authors = ["yokubo"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "racker_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"
thiserror = "2"
parking_lot = "0.12"
dirs = "5"

